获取皮肤宽度API，完善傀儡框架